prevent div overlap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,4 +15,5 @@ label {
 #beltCount {
   width: 250px;
   max-width: 100%;
+  height: 100%;
 }
